use toList whenever possible